log
Wed, Mar 26, 2025  9:03:34 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  9:04:24 AM: 
 list.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
147b81d
Wed, Mar 26, 2025  9:05:46 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
b8b1db2
Wed, Mar 26, 2025  9:07:47 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d711348
Wed, Mar 26, 2025  9:09:45 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f59da12
Wed, Mar 26, 2025  9:11:03 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
6a29007
Wed, Mar 26, 2025  9:12:16 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:49:29: error: 'List {aka struct List}' has no member named 'next'
     if (list == NULL || list->next == NULL) return NULL;
                             ^~
list.c:50:25: error: 'List {aka struct List}' has no member named 'next'
     list->current = list->next;
                         ^~
Compilation failed
7298a12
Wed, Mar 26, 2025  9:13:23 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f338239
Wed, Mar 26, 2025  9:14:32 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
106d48c
Wed, Mar 26, 2025  9:24:19 AM: 
 list.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
495845a
Wed, Mar 26, 2025  9:25:28 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
24d38b1
Wed, Mar 26, 2025  9:32:20 AM: 
 list.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
In file included from test.c:5:0:
list.c: In function 'prevList':
list.c:67:5: error: expected ';' before 'return'
     return list->current->data;
     ^~~~~~
list.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d9144f5
Wed, Mar 26, 2025  9:34:01 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
5151997
Wed, Mar 26, 2025  9:35:23 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
5f79b35
Wed, Mar 26, 2025  9:39:53 AM: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|0
d49a9db
Wed, Mar 26, 2025  9:43:30 AM: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|0
203eb33
Wed, Mar 26, 2025  9:44:18 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
bdf0a05
Wed, Mar 26, 2025  9:50:02 AM: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
6020b95
Wed, Mar 26, 2025  9:52:18 AM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
7641557
Wed, Mar 26, 2025  9:54:59 AM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
f986e58
Wed, Mar 26, 2025  9:57:17 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
5ed04b5
Wed, Mar 26, 2025  9:59:29 AM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  10|2
total_score: 45/70
93ce19d
Wed, Mar 26, 2025  9:00:05 PM: 
 list.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:111:9: error: expected ';' before 'list'
         list->current->prev = newNode;
         ^~~~
Compilation failed
d2f73cc
Wed, Mar 26, 2025  9:00:21 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
c526623
Wed, Mar 26, 2025  9:10:13 PM: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:106:9: error: 'llist' undeclared (first use in this function)
     if (llist->current->prev != NULL)
         ^~~~~
list.c:106:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
29f4eee
Wed, Mar 26, 2025  9:10:33 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
0d3fadd
Wed, Mar 26, 2025  9:13:54 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
7b3637d
Wed, Mar 26, 2025  9:15:07 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
d313587
Wed, Mar 26, 2025  9:18:17 PM: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
50818fd
Wed, Mar 26, 2025  9:20:47 PM: 
 list.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:120:22: error: 'newNode' undeclared (first use in this function)
         list->head = newNode;
                      ^~~~~~~
list.c:120:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a284cf3
Wed, Mar 26, 2025  9:21:39 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
a0973f0
Thu, Mar 27, 2025  8:46:46 PM: 
 list.c | 30 +++---------------------------
 1 file changed, 3 insertions(+), 27 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:103:5: error: expected ';' before 'newNode'
     newNode->prev = list->current;
     ^~~~~~~
Compilation failed
c9f43dc
Thu, Mar 27, 2025  8:46:57 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
91fa78f
Thu, Mar 27, 2025  8:47:50 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
f9f7727
Thu, Mar 27, 2025  8:55:35 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
23a55d5
Thu, Mar 27, 2025  8:56:45 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
acd0b2f
Thu, Mar 27, 2025  9:01:08 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
0333236
Thu, Mar 27, 2025  9:03:34 PM: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
3e8a6ef
Thu, Mar 27, 2025 11:18:12 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
89e8b08
Thu, Mar 27, 2025 11:20:38 PM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
e83c162
Thu, Mar 27, 2025 11:22:04 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
7f3fe2d
